--- a/config/odoo.conf
+++ b/config/odoo.conf
@@ -4,7 +4,7 @@
 db_host = db
 db_port = 5432
 db_user = odoo
-db_password = false
+# db_password provided via DB_PASSWORD environment variable
 db_template = template0
 
 # Chemins des modules
