--- a/docker-compose.coolify.yml
+++ b/docker-compose.coolify.yml
@@ -49,6 +49,7 @@ services:
           /usr/local/bin/init_openeducat.sh && touch /var/lib/odoo/.openeducat_initialized
         fi
         exec odoo \
+          -c /etc/odoo/odoo.conf \
           --db_host "${DB_HOST:-db}" \
           --db_port "${DB_PORT:-5432}" \
           --db_user "${DB_USER:-odoo}" \
@@ -61,7 +62,6 @@ services:
     ports:
       - "8069:8069"
     volumes:
-      - odoo_addons:/mnt/extra-addons
       - odoo_filestore:/var/lib/odoo
       - ./config:/etc/odoo:ro
 
@@ -111,5 +111,4 @@ services:
 volumes:
   db_data:
   redis_data:
-  odoo_addons:
   odoo_filestore:
