fix(coolify): intégrer /etc/odoo/odoo.conf dans l’image et retirer le bind mount\n\n- Dockerfile: COPY config/odoo.conf + permissions\n- docker-compose.coolify: suppression du mount ./config -> /etc/odoo\n- Objectif: éviter l’erreur 'config file ... doesn’t exist' en prod

--- a/docker-compose.coolify.yml
+++ b/docker-compose.coolify.yml
@@ -63,7 +63,7 @@ services:
       - "8069:8069"
     volumes:
       - odoo_filestore:/var/lib/odoo
-      - ./config:/etc/odoo:ro
+      # La config Odoo est intégrée dans l'image; pas de bind mount nécessaire côté Coolify
 
   # Service de backup optionnel
   backup:
