--- a/docker-compose.coolify.yml
+++ b/docker-compose.coolify.yml
@@ -48,6 +48,9 @@ services:
         if [ ! -f /var/lib/odoo/.openeducat_initialized ]; then
           /usr/local/bin/init_openeducat.sh && touch /var/lib/odoo/.openeducat_initialized
         fi
+        if [ ! -f /var/lib/odoo/.admin_credentials_aligned ]; then
+          /usr/local/bin/set_admin_credentials.sh && touch /var/lib/odoo/.admin_credentials_aligned
+        fi
         exec odoo \
           -c /etc/odoo/odoo.conf \
           --db_host "${DB_HOST:-db}" \
