fix(admin): rendre l’alignement admin robuste (script Python Odoo) et propager DB_NAME\n\n- Remplace odoo shell par script Python utilisant odoo.api\n- Ajout de DB_NAME dans l’environnement web (local & Coolify)\n- Assure la mise à jour du login/email/password admin de façon fiable

--- a/docker-compose.coolify.yml
+++ b/docker-compose.coolify.yml
@@ -36,6 +36,7 @@ services:
       - HOST=${DB_HOST:-db}
       - USER=${DB_USER:-odoo}
       - PASSWORD=${POSTGRES_PASSWORD}
+      - DB_NAME=${DB_NAME:-odoo}
       - DB_HOST=${DB_HOST:-db}
       - DB_USER=${DB_USER:-odoo}
       - DB_PASSWORD=${POSTGRES_PASSWORD}
