fix(env): injecter ADMIN_EMAIL et ODOO_ADMIN_PASSWORD dans le service web (Coolify & local)\n\n- Compose: passe les 2 variables au container pour l’alignement admin\n- Docs: précisent l’usage d’ADMIN_EMAIL pour la connexion

--- a/docker-compose.coolify.yml
+++ b/docker-compose.coolify.yml
@@ -41,6 +41,8 @@ services:
       - DB_USER=${DB_USER:-odoo}
       - DB_PASSWORD=${POSTGRES_PASSWORD}
       - DB_PORT=${DB_PORT:-5432}
+      - ADMIN_EMAIL=${ADMIN_EMAIL}
+      - ODOO_ADMIN_PASSWORD=${ODOO_ADMIN_PASSWORD}
       - ODOO_RC=/etc/odoo/odoo.conf
     command:
       - bash
