fix(admin): exécuter l’alignement admin à chaque démarrage (idempotent)\n\n- Supprime la sentinelle .admin_credentials_aligned et relance le script à chaque start\n- Évite les blocages si l’alignement a échoué lors d’un déploiement précédent

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,9 +55,7 @@ services:
         if [ ! -f /var/lib/odoo/.openeducat_initialized ]; then
           /usr/local/bin/init_openeducat.sh && touch /var/lib/odoo/.openeducat_initialized
         fi
-        if [ ! -f /var/lib/odoo/.admin_credentials_aligned ]; then
-          /usr/local/bin/set_admin_credentials.sh && touch /var/lib/odoo/.admin_credentials_aligned
-        fi
+        /usr/local/bin/set_admin_credentials.sh
         exec odoo \
           -c /etc/odoo/odoo.conf \
           --db_host "${DB_HOST:-db}" \
