fix(backup): intégrer backup.sh dans l'image Docker
Coolify monte les fichiers individuels comme des répertoires, ce qui
causait l'erreur 'Is a directory'. Solution:

- Copier backup.sh dans l'image via Dockerfile (comme les autres scripts)
- Utiliser build: . au lieu de image: postgres:16 pour le service backup
- Retirer le bind mount du script (maintenant dans l'image)
- Optimiser l'installation: postgresql-client déjà présent, seul rclone ajouté
- Service backup utilise maintenant la même image que web (cohérence)

L'image inclut désormais tous les outils nécessaires (pg_dump, rclone).

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -124,7 +124,9 @@ services:
       - traefik  # Utiliser avec: docker-compose --profile traefik up
 
   backup:
-    image: postgres:16
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: openeducat_backup
     restart: unless-stopped
     env_file:
@@ -137,7 +139,6 @@ services:
     volumes:
       - odoo_filestore:/data/odoo_filestore:ro
       - ./backups:/backups
-      - ./backup.sh:/usr/local/bin/backup.sh:ro
     entrypoint: ["/bin/bash", "/usr/local/bin/backup.sh"]
     depends_on:
       db:
