--- a/docker-compose.coolify.yml
+++ b/docker-compose.coolify.yml
@@ -85,7 +85,9 @@ services:
 
   # Service de backup optionnel
   backup:
-    image: postgres:16
+    build:
+      context: .
+      dockerfile: Dockerfile
     restart: unless-stopped
     env_file:
       - .env
@@ -97,7 +99,6 @@ services:
     volumes:
       - odoo_filestore:/data/odoo_filestore:ro
       - ./backups:/backups
-      - ./backup.sh:/usr/local/bin/backup.sh:ro
     entrypoint: ["/bin/bash", "/usr/local/bin/backup.sh"]
     depends_on:
       db:
