--- a/docker-compose.coolify.yml
+++ b/docker-compose.coolify.yml
@@ -88,6 +88,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    user: root  # Nécessaire pour accéder aux volumes et exécuter pg_dump
     restart: unless-stopped
     env_file:
       - .env
