--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -128,6 +128,7 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: openeducat_backup
+    user: root  # Nécessaire pour accéder aux volumes et exécuter pg_dump
     restart: unless-stopped
     env_file:
       - .env
